# showcase

./: .gitignore  CITATION.cff  README.md  hermes.toml  pyproject.toml
.github/workflows/: hermes.yml
.hermes/curate/: codemeta.json  hermes.json  target_branch
src/showcase/: hello.py
